--- a/app/pskcms/view/site/editnav.html
+++ b/app/pskcms/view/site/editnav.html
@@ -124,12 +124,12 @@
           <input type="text" class="input" type="number" value="{$v.sort}" name="sort"  />          
           </div>
       </li>
-	  <li><label>每页数量：</label>
+	  <li><label>每页数量(电脑端)：</label>
       	  <div class="item">
           <input type="text" class="input" type="number" value="{$v.page}" name="page"  />          
           </div>
       </li>
-	  <li><label>每页数量：</label>
+	  <li><label>每页数量(手机端)：</label>
       	  <div class="item">
           <input type="text" class="input" type="number" value="{$v.wap_page}" name="wap_page"  />          
           </div>
